--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,7 @@
     "import sys\n",
     "from pathlib import Path\n",
     "import math\n",
+    "import time\n",
     "\n",
     "from moviepy.editor import ipython_display as video_display\n",
     "import time\n",
@@ -59,8 +60,7 @@
     "from time import strftime\n",
     "OmegaConf.register_new_resolver(\n",
     "    \"current_time\", lambda: strftime(\"%Y%m%d-%H%M%S\"), replace=True\n",
-    ")\n",
-    "from bbrl.agents.gymnasium import GymAgent, ParallelGymAgent, make_env, record_video"
+    ")"
    ]
   },
   {
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " 2023-12-27 15:44:34 GMT\n",
+      " 2023-12-28 17:09:01 GMT\n",
       "OK.\n"
      ]
     }
@@ -144,10 +144,6 @@
     "Continuous action version of the classic cart-pole system implemented by Rich\n",
     "Sutton et al.\n",
     "\"\"\"\n",
-    "import math\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
     "from gymnasium.envs.classic_control.cartpole import CartPoleEnv\n",
     "from gymnasium import logger, spaces\n",
     "from gymnasium.wrappers import TimeLimit\n",
@@ -238,109 +234,18 @@
     "  )\n",
     "except:\n",
     "    print(\"Except\")\n",
-    "    pass\n",
-    "\n"
+    "    pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "from gymnasium.envs.classic_control.cartpole import CartPoleEnv\n",
-    "from gymnasium import logger, spaces\n",
-    "\n",
-    "class ContinuousCartPoleEnv(CartPoleEnv):\n",
-    "    \"\"\"Continuous version  of the CartPole-v1 environment\"\"\"\n",
-    "\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "        self.min_action = -1.0\n",
-    "        self.max_action = 1.0\n",
-    "        self.action_space = spaces.Box(\n",
-    "            self.min_action, self.max_action, shape=(1,), dtype=np.float64\n",
-    "        )\n",
-    "\n",
-    "    def step(self, action):\n",
-    "        if action > self.max_action:\n",
-    "            action = np.array(self.max_action)\n",
-    "        elif action < self.min_action:\n",
-    "            action = np.array(self.min_action)\n",
-    "        assert self.state is not None, \"Call reset before using step method.\"\n",
-    "\n",
-    "        x, x_dot, theta, theta_dot = self.state\n",
-    "        force = self.force_mag * float(action)\n",
-    "\n",
-    "        costheta = math.cos(theta)\n",
-    "        sintheta = math.sin(theta)\n",
-    "\n",
-    "        # For the interested reader:\n",
-    "        # https://coneural.org/florian/papers/05_cart_pole.pdf\n",
-    "        temp = (\n",
-    "            force + self.polemass_length * theta_dot**2 * sintheta\n",
-    "        ) / self.total_mass\n",
-    "        thetaacc = (self.gravity * sintheta - costheta * temp) / (\n",
-    "            self.length * (4.0 / 3.0 - self.masspole * costheta**2 / self.total_mass)\n",
-    "        )\n",
-    "        xacc = temp - self.polemass_length * thetaacc * costheta / self.total_mass\n",
-    "\n",
-    "        if self.kinematics_integrator == \"euler\":\n",
-    "            x = x + self.tau * x_dot\n",
-    "            x_dot = x_dot + self.tau * xacc\n",
-    "            theta = theta + self.tau * theta_dot\n",
-    "            theta_dot = theta_dot + self.tau * thetaacc\n",
-    "        else:  # semi-implicit euler\n",
-    "            x_dot = x_dot + self.tau * xacc\n",
-    "            x = x + self.tau * x_dot\n",
-    "            theta_dot = theta_dot + self.tau * thetaacc\n",
-    "            theta = theta + self.tau * theta_dot\n",
-    "\n",
-    "        self.state = (x, x_dot, theta, theta_dot)\n",
-    "\n",
-    "        terminated = bool(\n",
-    "            x < -self.x_threshold\n",
-    "            or x > self.x_threshold\n",
-    "            or theta < -self.theta_threshold_radians\n",
-    "            or theta > self.theta_threshold_radians\n",
-    "        )\n",
-    "\n",
-    "        if not terminated:\n",
-    "            reward = 1.0\n",
-    "        elif self.steps_beyond_terminated is None:\n",
-    "            # Pole just fell!\n",
-    "            self.steps_beyond_terminated = 0\n",
-    "            reward = 1.0\n",
-    "        else:\n",
-    "            if self.steps_beyond_terminated == 0:\n",
-    "                logger.warn(\n",
-    "                    \"You are calling 'step()' even though this \"\n",
-    "                    \"environment has already returned terminated = True. You \"\n",
-    "                    \"should always call 'reset()' once you receive 'terminated = \"\n",
-    "                    \"True' -- any further steps are undefined behavior.\"\n",
-    "                )\n",
-    "            self.steps_beyond_terminated += 1\n",
-    "            reward = 0.0\n",
-    "\n",
-    "        if self.render_mode == \"human\":\n",
-    "            self.render()\n",
-    "        return np.array(self.state, dtype=np.float32), reward, terminated, False, {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn\n",
-    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "class Cacla(nn.Module):\n",
-    "    def __init__(self, in_dim, h_dim, activation=nn.Tanh, discount_factor=0.95, gaussian_noise=0.01, var=False):\n",
+    "    def __init__(self, in_dim, h_dim, activation=nn.Tanh, discount_factor=0.95, gaussian_noise=0.01, var=False, exploration='gaussian'):\n",
     "        super(Cacla,self).__init__()\n",
     "        self.critic = nn.Sequential(\n",
     "            nn.Linear(in_dim, h_dim),\n",
@@ -360,14 +265,18 @@
     "        self.vart = 1\n",
     "        self.beta = 0.001\n",
     "        self.with_var = var\n",
+    "\n",
+    "        self.eps = 1\n",
+    "        self.eps_decay = 0.99\n",
+    "        self.eps_min = 0.01\n",
+    "        \n",
+    "        self.exploration = 'gaussian'\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = torch.from_numpy(x).unsqueeze(0)\n",
     "        return self.critic(x), self.actor(x)\n",
     "    \n",
-    "    def sample(self, x):\n",
-    "        return (x + np.random.normal(0,self.gaussian_noise))\n",
-    "    \n",
+    "    # Loss computation\n",
     "    def compute_critic_loss(self, value, target):\n",
     "        delta = (target - value).detach()\n",
     "        loss =  (target - value)**2\n",
@@ -379,8 +288,24 @@
     "    \n",
     "    def compute_actor_loss(self, value, target):\n",
     "        return (value - target)**2\n",
-    "        \n",
-    "        \n",
+    "    \n",
+    "    # Exploration\n",
+    "    def sample(self, x):\n",
+    "        if self.exploration == 'gaussian':\n",
+    "            return self.sample_gaussian(x)\n",
+    "        elif self.exploration == 'epsilon':\n",
+    "            return self.sample_epsilon(x)\n",
+    "        else: \n",
+    "            print('Exploration unknown: ', self.exploration)\n",
+    "            \n",
+    "    \n",
+    "    def sample_gaussian(self, x):\n",
+    "        return (x + np.random.normal(0,self.gaussian_noise))\n",
+    "    \n",
+    "    def sample_epsilon(self, x, inf=-1, sup=1):\n",
+    "        if torch.rand(1) > self.eps: return x\n",
+    "        else: return np.random.rand() * (sup - inf) - inf\n",
+    "\n",
     "\n",
     "def test(eval_env, model, n_test = 10):\n",
     "    cum_reward = 0\n",
@@ -395,11 +320,10 @@
     "                cum_reward += reward\n",
     "    return cum_reward/n_test\n",
     "    \n",
-    "def train(eval_env, train_env, model, optim, eval_interval=1000, step_max=100000):\n",
-    "    it = 0\n",
+    "def train(eval_env, train_env, model, optim, eval_interval=1000, step_max=100000, n_test=10):\n",
     "    obs ,_ = train_env.reset()\n",
-    "    while it < step_max:\n",
-    "        it += 1\n",
+    "    scores = []\n",
+    "    for it in range(step_max):\n",
     "        optim.zero_grad()\n",
     "        v0, a0 = model(obs)\n",
     "        obs0 = obs\n",
@@ -419,41 +343,40 @@
     "        optim.step()\n",
     "        if done or truncated: obs,_ = train_env.reset()\n",
     "        if it % eval_interval == 0:\n",
-    "            perf = test(eval_env, model)\n",
-    "            print(f'{it = } | reward {perf}')"
+    "            perf = test(eval_env, model, n_test)\n",
+    "            scores.append([float(it), perf])\n",
+    "            print(f'{it = } | reward {perf}')\n",
+    "    return scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "it = 5000 | reward 84.4\n",
-      "it = 10000 | reward 204.7\n",
-      "it = 15000 | reward 177.1\n",
-      "it = 20000 | reward 378.8\n",
-      "it = 25000 | reward 335.0\n",
-      "it = 30000 | reward 434.5\n",
-      "it = 35000 | reward 382.6\n",
-      "it = 40000 | reward 486.9\n",
-      "it = 45000 | reward 500.0\n",
-      "it = 50000 | reward 500.0\n",
-      "it = 55000 | reward 500.0\n",
-      "it = 60000 | reward 500.0\n",
-      "it = 65000 | reward 500.0\n",
-      "it = 70000 | reward 500.0\n",
-      "it = 75000 | reward 500.0\n",
-      "it = 80000 | reward 500.0\n",
-      "it = 85000 | reward 500.0\n",
-      "it = 90000 | reward 500.0\n",
-      "it = 95000 | reward 500.0\n",
-      "it = 100000 | reward 500.0\n"
+      "======= run = 0 / 0 =========\n",
+      "it = 0 | reward 41.4\n",
+      "it = 5000 | reward 57.0\n",
+      "it = 10000 | reward 227.0\n",
+      "[[0, 41.4], [5000, 57.0], [10000, 227.0]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot construct a dtype from an array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yd/v7_2g2ys6dlc_jwd4rjdgsj00000gn/T/ipykernel_61065/121220827.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mtimestr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%Y%m%d-%H%M%S\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'data/{timestr}.log'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, like)\u001b[0m\n\u001b[1;32m   1030\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1031\u001b[0m     \u001b[0;31m# Make sure we're dealing with a proper dtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1032\u001b[0;31m     \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1033\u001b[0m     \u001b[0mdefconv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_getconv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1034\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Cannot construct a dtype from an array"
      ]
     }
    ],
@@ -465,12 +388,25 @@
     "eval_env = gymnasium.make('CartpoleEnvCacla')\n",
     "eval_env = TimeLimit(eval_env, max_episode_steps=500)\n",
     "\n",
-    "cacla = Cacla(in_dim=4, h_dim=12, \n",
-    "              discount_factor=0.95, \n",
-    "              gaussian_noise=0.1,\n",
-    "             var=True)\n",
-    "optim = SGD(cacla.parameters(), lr=0.01)\n",
-    "train(eval_env, train_env, cacla, optim, eval_interval=5000, step_max=102400)"
+    "all_perfs = []\n",
+    "n_runs = 1\n",
+    "\n",
+    "for run in range(n_runs):\n",
+    "    print(f'======= {run = } / {n_runs-1} =========')\n",
+    "    cacla = Cacla(in_dim=4, h_dim=12, \n",
+    "                  discount_factor=0.95, \n",
+    "                  gaussian_noise=0.1,\n",
+    "                 var=True,\n",
+    "                 exploration='gaussian')\n",
+    "    optim = SGD(cacla.parameters(), lr=0.01)\n",
+    "    scores = train(eval_env, train_env, cacla, optim, \n",
+    "                   eval_interval=5000, \n",
+    "                   step_max=10001,\n",
+    "                  n_test=10)\n",
+    "    print(scores)\n",
+    "    scores = np.array(scores)\n",
+    "    timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    np.loadtxt(f'data/{timestr}.log', scores)"
    ]
   },
   {
