--- a/ddpg_gav/gav.ipynb
+++ b/ddpg_gav/gav.ipynb
@@ -75,7 +75,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " 2024-01-08 12:59:41 GMT\n",
+      " 2024-01-10 16:05:55 GMT\n",
       "OK.\n"
      ]
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,10 +309,10 @@
     "    with torch.no_grad():\n",
     "        for _ in range(n_test):\n",
     "            done, truncated = False, False\n",
-    "            obs,_ = eval_env.reset()\n",
+    "            obs0,_ = eval_env.reset()\n",
     "            while not done and not truncated:\n",
-    "                _, a0 = model(obs)  \n",
-    "                obs, reward, done,truncated,_ = eval_env.step(a0) \n",
+    "                _, a0 = model(obs0)  \n",
+    "                obs0, reward, done,truncated,_ = eval_env.step(a0) \n",
     "                cum_reward += reward\n",
     "    return cum_reward/n_test\n",
     "    \n",
@@ -326,10 +326,9 @@
     "        model.critic_optim.zero_grad()\n",
     "            \n",
     "        q0, action = model(obs)\n",
-    "        bruit = np.random.normal(0,0.3)\n",
     "        \n",
-    "        obs, reward, done, truncated, reste = train_env.step(action+bruit) \n",
-    "        reward = model.sample(reward)\n",
+    "        obs, reward, done, truncated, reste = train_env.step(action+np.random.normal(0,0.3)) \n",
+    "        reward = model.sample(reward+np.random.normal(0,0.3))\n",
     "        q1, _ = model(obs)\n",
     "        delta = reward + model.discount_factor*q1.detach() - q0\n",
     "        (delta**2).backward()\n",
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -362,97 +361,73 @@
      "output_type": "stream",
      "text": [
       "======= run = 0 / 19 =========\n",
-      "it = 1024 | reward 33.3\n",
-      "it = 2048 | reward 58.0\n",
-      "it = 3072 | reward 36.0\n",
-      "it = 4096 | reward 48.4\n",
-      "it = 5120 | reward 74.6\n",
-      "it = 6144 | reward 64.0\n",
-      "it = 7168 | reward 14.1\n",
-      "it = 8192 | reward 10.8\n",
-      "it = 9216 | reward 161.3\n",
-      "it = 10240 | reward 157.0\n",
-      "it = 11264 | reward 160.9\n",
-      "it = 12288 | reward 188.8\n",
-      "it = 13312 | reward 160.3\n",
-      "it = 14336 | reward 164.7\n",
-      "it = 15360 | reward 137.9\n",
-      "it = 16384 | reward 127.4\n",
-      "it = 17408 | reward 161.6\n",
-      "it = 18432 | reward 119.1\n",
-      "it = 19456 | reward 192.8\n",
-      "it = 20480 | reward 79.9\n",
-      "it = 21504 | reward 108.2\n",
-      "it = 22528 | reward 236.6\n",
-      "it = 23552 | reward 126.1\n",
-      "it = 24576 | reward 291.3\n",
-      "it = 25600 | reward 119.6\n",
-      "it = 26624 | reward 124.2\n",
-      "it = 27648 | reward 123.0\n",
-      "it = 28672 | reward 38.4\n",
-      "it = 29696 | reward 17.8\n",
-      "it = 30720 | reward 21.3\n",
-      "it = 31744 | reward 48.3\n",
-      "it = 32768 | reward 26.5\n",
-      "it = 33792 | reward 10.3\n",
-      "it = 34816 | reward 8.4\n",
-      "it = 35840 | reward 27.4\n",
-      "it = 36864 | reward 138.2\n",
-      "it = 37888 | reward 195.8\n",
-      "it = 38912 | reward 193.9\n",
-      "it = 39936 | reward 193.0\n",
-      "it = 40960 | reward 194.0\n",
-      "it = 41984 | reward 241.0\n",
-      "it = 43008 | reward 229.3\n",
-      "it = 44032 | reward 157.9\n",
-      "it = 45056 | reward 118.5\n",
-      "it = 46080 | reward 119.7\n",
-      "it = 47104 | reward 108.3\n",
-      "it = 48128 | reward 100.0\n",
-      "it = 49152 | reward 98.2\n",
-      "it = 50176 | reward 86.3\n",
-      "it = 51200 | reward 78.6\n",
-      "it = 52224 | reward 72.8\n",
-      "it = 53248 | reward 82.0\n",
-      "it = 54272 | reward 96.2\n",
-      "it = 55296 | reward 101.7\n",
-      "it = 56320 | reward 28.1\n",
-      "it = 57344 | reward 26.1\n",
-      "it = 58368 | reward 53.4\n",
-      "it = 59392 | reward 135.8\n",
-      "it = 60416 | reward 128.5\n",
-      "it = 61440 | reward 134.2\n",
-      "it = 62464 | reward 129.6\n",
-      "it = 63488 | reward 114.4\n",
-      "it = 64512 | reward 144.9\n",
-      "it = 65536 | reward 109.7\n",
-      "it = 66560 | reward 79.8\n",
-      "it = 67584 | reward 115.9\n",
-      "it = 68608 | reward 110.7\n",
-      "it = 69632 | reward 80.1\n",
-      "it = 70656 | reward 114.7\n",
-      "it = 71680 | reward 130.7\n",
-      "it = 72704 | reward 131.6\n",
-      "it = 73728 | reward 114.2\n",
-      "it = 74752 | reward 104.5\n",
-      "it = 75776 | reward 107.4\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [73], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m======= \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrun \u001b[38;5;132;01m= }\u001b[39;00m\u001b[38;5;124m / \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_runs\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m =========\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m gav \u001b[38;5;241m=\u001b[39m Gav(in_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, h_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, \n\u001b[1;32m     12\u001b[0m           discount_factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.95\u001b[39m, \n\u001b[1;32m     13\u001b[0m           gaussian_noise\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m,exploration \u001b[38;5;241m=\u001b[39mexplo)\n\u001b[0;32m---> 14\u001b[0m scores \u001b[38;5;241m=\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43meval_env\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_env\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgav\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meval_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1024\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstep_max\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m102400\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(scores\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     16\u001b[0m final\u001b[38;5;241m.\u001b[39mappend(scores)\n",
-      "Cell \u001b[0;32mIn [72], line 88\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(eval_env, train_env, model, eval_interval, step_max, exploration)\u001b[0m\n\u001b[1;32m     86\u001b[0m     model\u001b[38;5;241m.\u001b[39mactor_optim\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     87\u001b[0m     (\u001b[38;5;241m-\u001b[39mmodel(obs)[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m---> 88\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mactor_optim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     89\u001b[0m model\u001b[38;5;241m.\u001b[39mdecay()\n\u001b[1;32m     90\u001b[0m \u001b[38;5;66;03m# pour diminuer exponentiellement\u001b[39;00m\n",
-      "File \u001b[0;32m/users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/torch/optim/optimizer.py:373\u001b[0m, in \u001b[0;36mOptimizer.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    368\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    369\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    370\u001b[0m                 \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must return None or a tuple of (new_args, new_kwargs), but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    371\u001b[0m             )\n\u001b[0;32m--> 373\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    374\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    376\u001b[0m \u001b[38;5;66;03m# call optimizer step post hooks\u001b[39;00m\n",
-      "File \u001b[0;32m/users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/torch/optim/optimizer.py:76\u001b[0m, in \u001b[0;36m_use_grad_for_differentiable.<locals>._use_grad\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m     torch\u001b[38;5;241m.\u001b[39mset_grad_enabled(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdefaults[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdifferentiable\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     75\u001b[0m     torch\u001b[38;5;241m.\u001b[39m_dynamo\u001b[38;5;241m.\u001b[39mgraph_break()\n\u001b[0;32m---> 76\u001b[0m     ret \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     78\u001b[0m     torch\u001b[38;5;241m.\u001b[39m_dynamo\u001b[38;5;241m.\u001b[39mgraph_break()\n",
-      "File \u001b[0;32m/users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/torch/optim/sgd.py:75\u001b[0m, in \u001b[0;36mSGD.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     71\u001b[0m momentum_buffer_list \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     73\u001b[0m has_sparse_grad \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_group(group, params_with_grad, d_p_list, momentum_buffer_list)\n\u001b[0;32m---> 75\u001b[0m \u001b[43msgd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams_with_grad\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[43m    \u001b[49m\u001b[43md_p_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmomentum_buffer_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweight_decay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mweight_decay\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmomentum\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmomentum\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     80\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     81\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdampening\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdampening\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnesterov\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnesterov\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     83\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmaximize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmaximize\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     84\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhas_sparse_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhas_sparse_grad\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     85\u001b[0m \u001b[43m    \u001b[49m\u001b[43mforeach\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mforeach\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;66;03m# update momentum_buffers in state\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p, momentum_buffer \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(params_with_grad, momentum_buffer_list):\n",
-      "File \u001b[0;32m/users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/torch/optim/sgd.py:220\u001b[0m, in \u001b[0;36msgd\u001b[0;34m(params, d_p_list, momentum_buffer_list, has_sparse_grad, foreach, weight_decay, momentum, lr, dampening, nesterov, maximize)\u001b[0m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    218\u001b[0m     func \u001b[38;5;241m=\u001b[39m _single_tensor_sgd\n\u001b[0;32m--> 220\u001b[0m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    221\u001b[0m \u001b[43m     \u001b[49m\u001b[43md_p_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    222\u001b[0m \u001b[43m     \u001b[49m\u001b[43mmomentum_buffer_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    223\u001b[0m \u001b[43m     \u001b[49m\u001b[43mweight_decay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mweight_decay\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    224\u001b[0m \u001b[43m     \u001b[49m\u001b[43mmomentum\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmomentum\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    225\u001b[0m \u001b[43m     \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    226\u001b[0m \u001b[43m     \u001b[49m\u001b[43mdampening\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdampening\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    227\u001b[0m \u001b[43m     \u001b[49m\u001b[43mnesterov\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnesterov\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    228\u001b[0m \u001b[43m     \u001b[49m\u001b[43mhas_sparse_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhas_sparse_grad\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    229\u001b[0m \u001b[43m     \u001b[49m\u001b[43mmaximize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmaximize\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/torch/optim/sgd.py:263\u001b[0m, in \u001b[0;36m_single_tensor_sgd\u001b[0;34m(params, d_p_list, momentum_buffer_list, weight_decay, momentum, lr, dampening, nesterov, maximize, has_sparse_grad)\u001b[0m\n\u001b[1;32m    260\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    261\u001b[0m         d_p \u001b[38;5;241m=\u001b[39m buf\n\u001b[0;32m--> 263\u001b[0m \u001b[43mparam\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_\u001b[49m\u001b[43m(\u001b[49m\u001b[43md_p\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mlr\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "it = 1024 | reward 7.8\n",
+      "it = 2048 | reward 7.3\n",
+      "it = 3072 | reward 7.6\n",
+      "it = 4096 | reward 7.6\n",
+      "it = 5120 | reward 7.5\n",
+      "it = 6144 | reward 8.9\n",
+      "it = 7168 | reward 53.7\n",
+      "it = 8192 | reward 42.4\n",
+      "it = 9216 | reward 46.5\n",
+      "it = 10240 | reward 50.1\n",
+      "it = 11264 | reward 65.5\n",
+      "it = 12288 | reward 40.1\n",
+      "it = 13312 | reward 277.8\n",
+      "it = 14336 | reward 100.4\n",
+      "it = 15360 | reward 74.6\n",
+      "it = 16384 | reward 82.0\n",
+      "it = 17408 | reward 70.3\n",
+      "it = 18432 | reward 68.3\n",
+      "it = 19456 | reward 70.4\n",
+      "it = 20480 | reward 76.0\n",
+      "it = 21504 | reward 131.5\n",
+      "it = 22528 | reward 23.4\n",
+      "it = 23552 | reward 22.2\n",
+      "it = 24576 | reward 66.9\n",
+      "it = 25600 | reward 66.8\n",
+      "it = 26624 | reward 64.7\n",
+      "it = 27648 | reward 79.1\n",
+      "it = 28672 | reward 66.7\n",
+      "it = 29696 | reward 72.2\n",
+      "it = 30720 | reward 71.2\n",
+      "it = 31744 | reward 80.9\n",
+      "it = 32768 | reward 78.3\n",
+      "it = 33792 | reward 72.9\n",
+      "it = 34816 | reward 74.6\n",
+      "it = 35840 | reward 363.6\n",
+      "it = 36864 | reward 84.1\n",
+      "it = 37888 | reward 80.7\n",
+      "it = 38912 | reward 78.8\n",
+      "it = 39936 | reward 70.7\n",
+      "it = 40960 | reward 69.8\n",
+      "it = 41984 | reward 77.4\n",
+      "it = 43008 | reward 70.9\n",
+      "it = 44032 | reward 73.9\n",
+      "it = 45056 | reward 72.9\n",
+      "it = 46080 | reward 80.6\n",
+      "it = 47104 | reward 91.6\n",
+      "it = 48128 | reward 86.7\n",
+      "it = 49152 | reward 79.7\n",
+      "it = 50176 | reward 71.0\n",
+      "it = 51200 | reward 63.4\n",
+      "it = 52224 | reward 73.6\n",
+      "it = 53248 | reward 42.2\n",
+      "it = 54272 | reward 79.5\n",
+      "it = 55296 | reward 39.4\n",
+      "it = 56320 | reward 78.3\n",
+      "it = 57344 | reward 49.8\n",
+      "it = 58368 | reward 73.5\n",
+      "it = 59392 | reward 85.6\n",
+      "it = 60416 | reward 77.7\n",
+      "it = 61440 | reward 48.4\n",
+      "it = 62464 | reward 77.8\n",
+      "it = 63488 | reward 65.9\n",
+      "it = 64512 | reward 77.3\n",
+      "it = 65536 | reward 89.2\n",
+      "it = 66560 | reward 88.7\n",
+      "it = 67584 | reward 84.0\n",
+      "it = 68608 | reward 82.9\n"
      ]
     }
    ],
@@ -461,7 +436,7 @@
     "# Initialisation\n",
     "n_runs = 20\n",
     "final = []\n",
-    "explo = \"egreedy\"\n",
+    "explo = \"gaussian\"\n",
     "for run in range(n_runs):\n",
     "    train_env = gymnasium.make('CartpoleEnvCacla')\n",
     "    train_env = TimeLimit(train_env, max_episode_steps=500)\n",
