--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -577,7 +577,172 @@
       "it = 64512 | reward 247.1\n",
       "it = 65536 | reward 244.0\n",
       "it = 66560 | reward 100.0\n",
-      "it = 67584 | reward 108.6\n"
+      "it = 67584 | reward 108.6\n",
+      "it = 68608 | reward 167.3\n",
+      "it = 69632 | reward 248.6\n",
+      "it = 70656 | reward 315.7\n",
+      "it = 71680 | reward 376.5\n",
+      "it = 72704 | reward 256.8\n",
+      "it = 73728 | reward 298.7\n",
+      "it = 74752 | reward 428.5\n",
+      "it = 75776 | reward 500.0\n",
+      "it = 76800 | reward 434.8\n",
+      "it = 77824 | reward 332.0\n",
+      "it = 78848 | reward 495.6\n",
+      "it = 79872 | reward 500.0\n",
+      "it = 80896 | reward 500.0\n",
+      "it = 81920 | reward 238.9\n",
+      "it = 82944 | reward 298.0\n",
+      "it = 83968 | reward 250.4\n",
+      "it = 84992 | reward 230.6\n",
+      "it = 86016 | reward 473.5\n",
+      "it = 87040 | reward 347.1\n",
+      "it = 88064 | reward 257.1\n",
+      "it = 89088 | reward 467.2\n",
+      "it = 90112 | reward 172.8\n",
+      "it = 91136 | reward 201.9\n",
+      "it = 92160 | reward 241.1\n",
+      "it = 93184 | reward 492.3\n",
+      "it = 94208 | reward 498.4\n",
+      "it = 95232 | reward 232.8\n",
+      "it = 96256 | reward 433.6\n",
+      "it = 97280 | reward 485.3\n",
+      "it = 98304 | reward 211.0\n",
+      "it = 99328 | reward 244.4\n",
+      "it = 100352 | reward 337.6\n",
+      "it = 101376 | reward 177.1\n",
+      "======= run = 2 / 18 =========\n",
+      "it = 0 | reward 15.9\n",
+      "it = 1024 | reward 14.9\n",
+      "it = 2048 | reward 20.8\n",
+      "it = 3072 | reward 43.9\n",
+      "it = 4096 | reward 62.3\n",
+      "it = 5120 | reward 50.6\n",
+      "it = 6144 | reward 53.1\n",
+      "it = 7168 | reward 53.8\n",
+      "it = 8192 | reward 53.2\n",
+      "it = 9216 | reward 62.0\n",
+      "it = 10240 | reward 57.9\n",
+      "it = 11264 | reward 41.0\n",
+      "it = 12288 | reward 90.4\n",
+      "it = 13312 | reward 97.8\n",
+      "it = 14336 | reward 115.0\n",
+      "it = 15360 | reward 110.3\n",
+      "it = 16384 | reward 52.3\n",
+      "it = 17408 | reward 70.5\n",
+      "it = 18432 | reward 60.6\n",
+      "it = 19456 | reward 87.5\n",
+      "it = 20480 | reward 37.9\n",
+      "it = 21504 | reward 71.1\n",
+      "it = 22528 | reward 87.3\n",
+      "it = 23552 | reward 105.0\n",
+      "it = 24576 | reward 79.2\n",
+      "it = 25600 | reward 106.9\n",
+      "it = 26624 | reward 153.9\n",
+      "it = 27648 | reward 136.5\n",
+      "it = 28672 | reward 94.4\n",
+      "it = 29696 | reward 110.4\n",
+      "it = 30720 | reward 80.5\n",
+      "it = 31744 | reward 96.7\n",
+      "it = 32768 | reward 69.7\n",
+      "it = 33792 | reward 84.7\n",
+      "it = 34816 | reward 70.3\n",
+      "it = 35840 | reward 54.6\n",
+      "it = 36864 | reward 98.2\n",
+      "it = 37888 | reward 167.1\n",
+      "it = 38912 | reward 125.8\n",
+      "it = 39936 | reward 148.1\n",
+      "it = 40960 | reward 125.8\n",
+      "it = 41984 | reward 130.0\n",
+      "it = 43008 | reward 258.7\n",
+      "it = 44032 | reward 129.1\n",
+      "it = 45056 | reward 135.6\n",
+      "it = 46080 | reward 258.4\n",
+      "it = 47104 | reward 111.0\n",
+      "it = 48128 | reward 131.5\n",
+      "it = 49152 | reward 86.5\n",
+      "it = 50176 | reward 229.2\n",
+      "it = 51200 | reward 154.1\n",
+      "it = 52224 | reward 188.7\n",
+      "it = 53248 | reward 169.5\n",
+      "it = 54272 | reward 105.7\n",
+      "it = 55296 | reward 144.9\n",
+      "it = 56320 | reward 112.3\n",
+      "it = 57344 | reward 143.2\n",
+      "it = 58368 | reward 254.4\n",
+      "it = 59392 | reward 211.0\n",
+      "it = 60416 | reward 215.6\n",
+      "it = 61440 | reward 255.3\n",
+      "it = 62464 | reward 171.1\n",
+      "it = 63488 | reward 230.5\n",
+      "it = 64512 | reward 278.1\n",
+      "it = 65536 | reward 318.3\n",
+      "it = 66560 | reward 328.8\n",
+      "it = 67584 | reward 436.8\n",
+      "it = 68608 | reward 395.3\n",
+      "it = 69632 | reward 106.8\n",
+      "it = 70656 | reward 111.8\n",
+      "it = 71680 | reward 165.9\n",
+      "it = 72704 | reward 111.9\n",
+      "it = 73728 | reward 82.8\n",
+      "it = 74752 | reward 315.8\n",
+      "it = 75776 | reward 297.3\n",
+      "it = 76800 | reward 428.8\n",
+      "it = 77824 | reward 181.4\n",
+      "it = 78848 | reward 179.3\n",
+      "it = 79872 | reward 130.3\n",
+      "it = 80896 | reward 175.5\n",
+      "it = 81920 | reward 270.0\n",
+      "it = 82944 | reward 156.1\n",
+      "it = 83968 | reward 182.3\n",
+      "it = 84992 | reward 313.1\n",
+      "it = 86016 | reward 311.6\n",
+      "it = 87040 | reward 281.5\n",
+      "it = 88064 | reward 333.9\n",
+      "it = 89088 | reward 171.4\n",
+      "it = 90112 | reward 130.5\n",
+      "it = 91136 | reward 170.3\n",
+      "it = 92160 | reward 211.3\n",
+      "it = 93184 | reward 224.4\n",
+      "it = 94208 | reward 248.9\n",
+      "it = 95232 | reward 450.3\n",
+      "it = 96256 | reward 225.3\n",
+      "it = 97280 | reward 156.3\n",
+      "it = 98304 | reward 70.9\n",
+      "it = 99328 | reward 204.8\n",
+      "it = 100352 | reward 162.8\n",
+      "it = 101376 | reward 191.1\n",
+      "======= run = 3 / 18 =========\n",
+      "it = 0 | reward 16.5\n",
+      "it = 1024 | reward 15.6\n",
+      "it = 2048 | reward 32.5\n",
+      "it = 3072 | reward 29.0\n",
+      "it = 4096 | reward 29.6\n",
+      "it = 5120 | reward 47.3\n",
+      "it = 6144 | reward 51.6\n",
+      "it = 7168 | reward 52.0\n",
+      "it = 8192 | reward 41.7\n",
+      "it = 9216 | reward 72.1\n",
+      "it = 10240 | reward 105.6\n",
+      "it = 11264 | reward 82.1\n",
+      "it = 12288 | reward 82.6\n",
+      "it = 13312 | reward 54.0\n",
+      "it = 14336 | reward 104.8\n",
+      "it = 15360 | reward 80.9\n",
+      "it = 16384 | reward 131.6\n",
+      "it = 17408 | reward 118.0\n",
+      "it = 18432 | reward 128.4\n",
+      "it = 19456 | reward 146.0\n",
+      "it = 20480 | reward 157.5\n",
+      "it = 21504 | reward 155.3\n",
+      "it = 22528 | reward 126.3\n",
+      "it = 23552 | reward 201.2\n",
+      "it = 24576 | reward 164.0\n",
+      "it = 25600 | reward 468.9\n",
+      "it = 26624 | reward 105.7\n",
+      "it = 27648 | reward 192.3\n",
+      "it = 28672 | reward 234.0\n",
+      "it = 29696 | reward 163.2\n"
      ]
     }
    ],
