--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -483,7 +483,19 @@
       "it = 3200 | reward 34.4\n",
       "it = 6400 | reward 55.1\n",
       "it = 12800 | reward 106.5\n",
-      "it = 25600 | reward 142.8\n"
+      "it = 25600 | reward 142.8\n",
+      "it = 51200 | reward 240.6\n",
+      "it = 102400 | reward 487.6\n",
+      "======= run = 5 / 20 =========\n",
+      "it = 0 | reward 16.9\n",
+      "it = 200 | reward 14.4\n",
+      "it = 400 | reward 13.9\n",
+      "it = 800 | reward 18.1\n",
+      "it = 1600 | reward 20.9\n",
+      "it = 3200 | reward 55.9\n",
+      "it = 6400 | reward 59.2\n",
+      "it = 12800 | reward 53.7\n",
+      "it = 25600 | reward 145.3\n"
      ]
     }
    ],
