--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -495,7 +495,189 @@
       "it = 3200 | reward 55.9\n",
       "it = 6400 | reward 59.2\n",
       "it = 12800 | reward 53.7\n",
-      "it = 25600 | reward 145.3\n"
+      "it = 25600 | reward 145.3\n",
+      "it = 51200 | reward 194.5\n",
+      "it = 102400 | reward 176.9\n",
+      "======= run = 6 / 20 =========\n",
+      "it = 0 | reward 11.3\n",
+      "it = 200 | reward 14.2\n",
+      "it = 400 | reward 16.8\n",
+      "it = 800 | reward 39.8\n",
+      "it = 1600 | reward 50.3\n",
+      "it = 3200 | reward 69.7\n",
+      "it = 6400 | reward 25.3\n",
+      "it = 12800 | reward 63.4\n",
+      "it = 25600 | reward 163.6\n",
+      "it = 51200 | reward 140.5\n",
+      "it = 102400 | reward 293.3\n",
+      "======= run = 7 / 20 =========\n",
+      "it = 0 | reward 38.4\n",
+      "it = 200 | reward 32.9\n",
+      "it = 400 | reward 26.6\n",
+      "it = 800 | reward 39.7\n",
+      "it = 1600 | reward 37.0\n",
+      "it = 3200 | reward 44.4\n",
+      "it = 6400 | reward 68.7\n",
+      "it = 12800 | reward 238.0\n",
+      "it = 25600 | reward 169.9\n",
+      "it = 51200 | reward 184.2\n",
+      "it = 102400 | reward 43.3\n",
+      "======= run = 8 / 20 =========\n",
+      "it = 0 | reward 20.7\n",
+      "it = 200 | reward 17.2\n",
+      "it = 400 | reward 14.0\n",
+      "it = 800 | reward 45.4\n",
+      "it = 1600 | reward 38.0\n",
+      "it = 3200 | reward 50.9\n",
+      "it = 6400 | reward 63.3\n",
+      "it = 12800 | reward 196.4\n",
+      "it = 25600 | reward 346.7\n",
+      "it = 51200 | reward 149.4\n",
+      "it = 102400 | reward 218.7\n",
+      "======= run = 9 / 20 =========\n",
+      "it = 0 | reward 34.1\n",
+      "it = 200 | reward 37.0\n",
+      "it = 400 | reward 26.4\n",
+      "it = 800 | reward 38.4\n",
+      "it = 1600 | reward 31.9\n",
+      "it = 3200 | reward 39.2\n",
+      "it = 6400 | reward 52.0\n",
+      "it = 12800 | reward 131.6\n",
+      "it = 25600 | reward 337.4\n",
+      "it = 51200 | reward 417.9\n",
+      "it = 102400 | reward 110.8\n",
+      "======= run = 10 / 20 =========\n",
+      "it = 0 | reward 23.6\n",
+      "it = 200 | reward 39.8\n",
+      "it = 400 | reward 34.4\n",
+      "it = 800 | reward 34.7\n",
+      "it = 1600 | reward 48.4\n",
+      "it = 3200 | reward 43.9\n",
+      "it = 6400 | reward 66.5\n",
+      "it = 12800 | reward 201.0\n",
+      "it = 25600 | reward 137.3\n",
+      "it = 51200 | reward 114.3\n",
+      "it = 102400 | reward 431.7\n",
+      "======= run = 11 / 20 =========\n",
+      "it = 0 | reward 28.5\n",
+      "it = 200 | reward 17.1\n",
+      "it = 400 | reward 30.0\n",
+      "it = 800 | reward 24.0\n",
+      "it = 1600 | reward 15.7\n",
+      "it = 3200 | reward 60.5\n",
+      "it = 6400 | reward 73.9\n",
+      "it = 12800 | reward 41.0\n",
+      "it = 25600 | reward 130.2\n",
+      "it = 51200 | reward 136.1\n",
+      "it = 102400 | reward 166.7\n",
+      "======= run = 12 / 20 =========\n",
+      "it = 0 | reward 16.4\n",
+      "it = 200 | reward 11.5\n",
+      "it = 400 | reward 15.7\n",
+      "it = 800 | reward 23.2\n",
+      "it = 1600 | reward 18.5\n",
+      "it = 3200 | reward 28.0\n",
+      "it = 6400 | reward 37.5\n",
+      "it = 12800 | reward 64.9\n",
+      "it = 25600 | reward 156.6\n",
+      "it = 51200 | reward 159.7\n",
+      "it = 102400 | reward 155.2\n",
+      "======= run = 13 / 20 =========\n",
+      "it = 0 | reward 43.4\n",
+      "it = 200 | reward 61.7\n",
+      "it = 400 | reward 31.4\n",
+      "it = 800 | reward 33.8\n",
+      "it = 1600 | reward 35.2\n",
+      "it = 3200 | reward 59.4\n",
+      "it = 6400 | reward 80.9\n",
+      "it = 12800 | reward 79.6\n",
+      "it = 25600 | reward 131.9\n",
+      "it = 51200 | reward 105.7\n",
+      "it = 102400 | reward 36.7\n",
+      "======= run = 14 / 20 =========\n",
+      "it = 0 | reward 25.1\n",
+      "it = 200 | reward 17.7\n",
+      "it = 400 | reward 29.5\n",
+      "it = 800 | reward 51.0\n",
+      "it = 1600 | reward 56.1\n",
+      "it = 3200 | reward 41.3\n",
+      "it = 6400 | reward 64.7\n",
+      "it = 12800 | reward 228.0\n",
+      "it = 25600 | reward 61.1\n",
+      "it = 51200 | reward 166.2\n",
+      "it = 102400 | reward 169.2\n",
+      "======= run = 15 / 20 =========\n",
+      "it = 0 | reward 36.4\n",
+      "it = 200 | reward 29.4\n",
+      "it = 400 | reward 35.1\n",
+      "it = 800 | reward 41.8\n",
+      "it = 1600 | reward 34.4\n",
+      "it = 3200 | reward 48.5\n",
+      "it = 6400 | reward 58.8\n",
+      "it = 12800 | reward 33.1\n",
+      "it = 25600 | reward 34.1\n",
+      "it = 51200 | reward 265.5\n",
+      "it = 102400 | reward 190.1\n",
+      "======= run = 16 / 20 =========\n",
+      "it = 0 | reward 11.1\n",
+      "it = 200 | reward 10.3\n",
+      "it = 400 | reward 11.0\n",
+      "it = 800 | reward 28.4\n",
+      "it = 1600 | reward 22.8\n",
+      "it = 3200 | reward 34.1\n",
+      "it = 6400 | reward 61.0\n",
+      "it = 12800 | reward 55.0\n",
+      "it = 25600 | reward 296.0\n",
+      "it = 51200 | reward 445.8\n",
+      "it = 102400 | reward 188.6\n",
+      "======= run = 17 / 20 =========\n",
+      "it = 0 | reward 35.0\n",
+      "it = 200 | reward 22.8\n",
+      "it = 400 | reward 16.6\n",
+      "it = 800 | reward 18.7\n",
+      "it = 1600 | reward 43.0\n",
+      "it = 3200 | reward 46.4\n",
+      "it = 6400 | reward 43.7\n",
+      "it = 12800 | reward 54.9\n",
+      "it = 25600 | reward 154.3\n",
+      "it = 51200 | reward 217.6\n",
+      "it = 102400 | reward 228.5\n",
+      "======= run = 18 / 20 =========\n",
+      "it = 0 | reward 45.6\n",
+      "it = 200 | reward 13.2\n",
+      "it = 400 | reward 32.4\n",
+      "it = 800 | reward 42.9\n",
+      "it = 1600 | reward 23.5\n",
+      "it = 3200 | reward 50.0\n",
+      "it = 6400 | reward 60.9\n",
+      "it = 12800 | reward 127.3\n",
+      "it = 25600 | reward 162.1\n",
+      "it = 51200 | reward 495.5\n",
+      "it = 102400 | reward 500.0\n",
+      "======= run = 19 / 20 =========\n",
+      "it = 0 | reward 18.2\n",
+      "it = 200 | reward 30.6\n",
+      "it = 400 | reward 20.6\n",
+      "it = 800 | reward 27.4\n",
+      "it = 1600 | reward 23.1\n",
+      "it = 3200 | reward 46.0\n",
+      "it = 6400 | reward 69.6\n",
+      "it = 12800 | reward 122.7\n",
+      "it = 25600 | reward 172.5\n",
+      "it = 51200 | reward 127.4\n",
+      "it = 102400 | reward 225.8\n",
+      "======= run = 20 / 20 =========\n",
+      "it = 0 | reward 20.8\n",
+      "it = 200 | reward 11.2\n",
+      "it = 400 | reward 16.0\n",
+      "it = 800 | reward 33.3\n",
+      "it = 1600 | reward 27.4\n",
+      "it = 3200 | reward 54.1\n",
+      "it = 6400 | reward 30.3\n",
+      "it = 12800 | reward 47.0\n",
+      "it = 25600 | reward 191.0\n",
+      "it = 51200 | reward 149.0\n",
+      "it = 102400 | reward 121.7\n"
      ]
     }
    ],
