--- a/cacla/cacla_keras.ipynb
+++ b/cacla/cacla_keras.ipynb
@@ -98,7 +98,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.SGD.\n",
+      "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.SGD.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -115,7 +124,7 @@
     "            truncated = False\n",
     "            obs0,_ = eval_env.reset()\n",
     "            while not done and not truncated:\n",
-    "                a0 = model.actor.predict(np.array([obs0]))\n",
+    "                a0 = model.actor.predict(np.array([obs0]), verbose=0)\n",
     "                obs0, reward, done,truncated,_ = eval_env.step(a0[0]) \n",
     "                cum_reward += reward\n",
     "    return cum_reward/n_test\n",
@@ -123,19 +132,20 @@
     "def addnoise(x, std):\n",
     "    return x + np.random.normal(0,std)\n",
     "    \n",
-    "def train(train_env, eval_env, model, step_max=102400, eval_step=1024):\n",
+    "def train(train_env, eval_env, model, step_max=102400, eval_step=1024, n_test=10, noise_std=0.3):\n",
+    "    observation0,_ = train_env.reset()\n",
     "    for it in range(step_max+1):\n",
     "        # get current value of value function for observation0\n",
-    "        V0 = model.critic.predict(np.array([observation0]))\n",
+    "        \n",
+    "        V0 = model.critic.predict(np.array([observation0]), verbose=0)\n",
     "        # predict default action\n",
-    "        A0 = model.actor.predict(np.array([observation0]))\n",
+    "        A0 = model.actor.predict(np.array([observation0]), verbose=0)\n",
     "        # sample new explored action\n",
-    "        a0 = [model.sample(A0[0], model.exploration_factor)]\n",
-    "\n",
-    "        observation1, reward, done, info = model.env.step(a0)\n",
+    "        a0 = model.sample(A0[0], model.exploration_factor)\n",
+    "        observation1, reward, done, truncated, info = train_env.step(a0[0])\n",
     "\n",
     "        #get current value of value function for observation1 and compute delta.\n",
-    "        V1 = model.critic.predict(np.array([observation1]))\n",
+    "        V1 = model.critic.predict(np.array([observation1]), verbose=0)\n",
     "        delta = reward + model.gamma * V1 - V0\n",
     "\n",
     "        # fit critic\n",
@@ -146,9 +156,8 @@
     "            model.actor.fit(np.array([observation0]), [a0], batch_size=1, verbose=0)\n",
     "            observation0 = observation1\n",
     "        if done or truncated: obs,_ = train_env.reset()\n",
-    "        if it % (100*(1<<count)) == 0:\n",
-    "            #if it % step_eval == 0:\n",
-    "            count += 1\n",
+    "        #if it % (100*(1<<count)) == 0:\n",
+    "        if it % eval_step == 0:\n",
     "            perf = test(eval_env, model, n_test, noise_std)\n",
     "            scores.append((it, perf))\n",
     "            print(f'{it = } | reward {perf}')\n",
@@ -159,10 +168,10 @@
     "    alpha=0.1,\n",
     "    beta=1,\n",
     "    gamma=0.9,\n",
-    "    exploration_factor=0.3,\n",
+    "    exploration_factor=0.1,\n",
     "    \n",
     ")\n",
-    "train(train_env, eval_env, model)"
+    "train(train_env, eval_env, cacla)"
    ]
   },
   {
