--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -406,7 +406,7 @@
     "        obs0 = obs\n",
     "        action = copy(a0)\n",
     "        action = model.sample(action).detach()\n",
-    "        obs, reward, done, truncated,reste = train_env.step(action)\n",
+    "        obs, reward, done, truncated, reste = train_env.step(action)\n",
     "        \n",
     "        # Compute losses\n",
     "        with torch.no_grad(): v1 = model.critic_forward(obs)\n",
@@ -418,7 +418,7 @@
     "        if (target_v - v0).item() > 0: \n",
     "            for _ in range(n_update):\n",
     "                optim_actor.zero_grad()\n",
-    "                mse_loss(a0, action).backward()\n",
+    "                mse_loss(model.actor_forward(obs), action).backward()\n",
     "                optim_actor.step()\n",
     "        if done or truncated: obs,_ = train_env.reset()\n",
     "        #if it % (100*(1<<count)) == 0:\n",
