--- a/cacla/cacla_keras.ipynb
+++ b/cacla/cacla_keras.ipynb
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " 2024-01-17 14:20:10 GMT\n",
+      " 2024-01-17 14:58:13 GMT\n",
       "OK.\n"
      ]
     }
@@ -103,8 +103,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2024-01-17 14:58:19.623269: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.SGD.\n",
       "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.SGD.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it:  0\n"
      ]
     }
    ],
@@ -134,6 +143,7 @@
     "    \n",
     "def train(train_env, eval_env, model, step_max=102400, eval_step=1024, n_test=10, noise_std=0.3):\n",
     "    observation0,_ = train_env.reset()\n",
+    "    scores = []\n",
     "    for it in range(step_max+1):\n",
     "        # get current value of value function for observation0\n",
     "        \n",
@@ -156,17 +166,18 @@
     "            model.actor.fit(np.array([observation0]), [a0], batch_size=1, verbose=0)\n",
     "            observation0 = observation1\n",
     "        if done or truncated: obs,_ = train_env.reset()\n",
-    "        #if it % (100*(1<<count)) == 0:\n",
+    "        if it % 100 == 0: print('it: ', it)\n",
     "        if it % eval_step == 0:\n",
     "            perf = test(eval_env, model, n_test, noise_std)\n",
     "            scores.append((it, perf))\n",
-    "            print(f'{it = } | reward {perf}')\n",
+    "            print(f'\\n{it = } | reward {perf}')\n",
+    "    return scores\n",
     "\n",
     "cacla = Cacla_Keras(\n",
     "    input_dim = 4,\n",
     "    output_dim=1,\n",
-    "    alpha=0.1,\n",
-    "    beta=1,\n",
+    "    alpha=0.01,\n",
+    "    beta=0.01,\n",
     "    gamma=0.9,\n",
     "    exploration_factor=0.1,\n",
     "    \n",
